{{$NEXT}}
  - Start implementing Mojo::Promise, drop support for Mojolicious <7.53
  - Implement DEBUG on Client as suggested in #11
  - Fix query parameter naming in Publisher
  - Fix missing imports in Publisher #15
  - Fix #14
0.0.9 2017-02-18T11:07:56Z
  - Proper implementation of URI parser PR#8 & #9
  - Support for query parameter with aliases
  - Add max_channels attribute to force maximum number of channels active
  - Additional developer test for quick consumer
  - Documentation changes
0.0.8 2017-01-30T12:13:18Z
  - Fix issues with UTF-8 data corruption on SSL sockets PR#7
  - Drop List::MoreUtils `none` in favour of core List::Util PR#4
0.0.7 2016-12-02T20:52:17Z
  - Fix missing dependencies
0.0.6 2016-11-24T00:45:01Z
  - First CPAN release
0.0.5  2016-11-23
  - First Minilla release
  - Drop support for Module::Install
0.0.4  2016-11-23
  - Moved all utility packages to Mojo::RabbitMQ::Client::* namespace
  - Added shorthand static methods for consumer & publisher
0.0.3  2016-11-18
  - Draft specs for new Publisher API
0.0.2  2016-10-25
  - Change the way how channels are opened
  - Deprecate _open method for channels
  - Show proper project url in client_properties
  - Support connect url according to spec
  - Include Module::Install for cleaner use in Docker containers
  - Docs updates & cleanups
0.0.1  2015-06-29
  - Initial release. Most things work.